// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutHeaderToolsAccountComponent should match the snapshot, when isMobile false 1`] = `
<div>
  <span
    class="fr-btn fr-fi-account-line"
    data-testid="layout-header-tools-account-component-desktop"
  >
    any-firstname-mock
     
    any-lastname-mock
  </span>
</div>
`;

exports[`LayoutHeaderToolsAccountComponent should match the snapshot, when isMobile true 1`] = `
<div>
  <span
    class="fr-btn fr-fi-account-line"
    data-testid="layout-header-tools-account-component-mobile"
  >
    any-firstname-mock
     
    any-lastname-mock
  </span>
</div>
`;
